# RitoShark-Crates

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/ritoshark/: Cargo.toml
crates/ritoshark/src/: lib.rs
crates/rs_anim/: Cargo.toml  README.md  Sample-Files-NOTE.md
crates/rs_anim/docs/: real-files-report.md
crates/rs_anim/src/: animation.rs  animation_read.rs  animation_write.rs  compressed.rs  error.rs  lib.rs  quantized.rs  raw.rs  skeleton.rs  skeleton_read.rs  skeleton_write.rs
crates/rs_anim/tests/: real_files.rs  roundtrip.rs
crates/rs_audio/: Cargo.toml  README.md
crates/rs_audio/docs/: real-files-report.md
crates/rs_audio/src/: bnk.rs  error.rs  lib.rs  wpk.rs
crates/rs_audio/tests/: real_files.rs  roundtrip.rs
crates/rs_bin/: Cargo.toml  README.md
crates/rs_bin/docs/: real-files-report.md
crates/rs_bin/src/: bin.rs  error.rs  lib.rs  read.rs  write.rs
crates/rs_bin/src/text/: mod.rs  parse.rs  print.rs
crates/rs_bin/tests/: mtx44_roundtrip.rs  real_files.rs  roundtrip.rs
crates/rs_cli/: Cargo.toml  README.md
crates/rs_cli/src/: error.rs  hashes.rs  main.rs  output.rs  pathsafe.rs
crates/rs_cli/src/commands/: audio.rs  bin.rs  mod.rs  read.rs  rst.rs  tex.rs  transform.rs  wad.rs
crates/rs_cli/tests/: cli.rs
crates/rs_file/: Cargo.toml
crates/rs_file/src/: lib.rs
crates/rs_hash/: Cargo.toml
crates/rs_hash/src/: elf.rs  error.rs  fnv.rs  ihash.rs  lib.rs  mapper.rs  xx.rs
crates/rs_io/: Cargo.toml
crates/rs_io/src/: error.rs  ext.rs  lib.rs  traits.rs
crates/rs_luabin/: Cargo.toml
crates/rs_luabin/src/: error.rs  globals.rs  lib.rs  luabin.rs  read.rs  write.rs
crates/rs_luabin/tests/: roundtrip.rs
crates/rs_mapgeo/: Cargo.toml  README.md
crates/rs_mapgeo/docs/: real-files-report.md
crates/rs_mapgeo/src/: error.rs  lib.rs  mapgeo.rs  read.rs  write.rs
crates/rs_mapgeo/tests/: real_files.rs  smoke.rs  synthetic_versions.rs
crates/rs_math/: Cargo.toml
crates/rs_math/src/: bounds.rs  color.rs  lib.rs
crates/rs_mesh/: Cargo.toml  README.md
crates/rs_mesh/docs/: real-files-report.md
crates/rs_mesh/src/: error.rs  lib.rs  read.rs  skinned.rs  static_mesh.rs  static_read.rs  write.rs
crates/rs_mesh/tests/: real_files.rs  roundtrip.rs
crates/rs_rman/: Cargo.toml  README.md
crates/rs_rman/docs/: real-files-report.md
crates/rs_rman/src/: error.rs  lib.rs  read.rs  rman.rs  validate.rs  write.rs
crates/rs_rman/tests/: parameters.rs  read.rs  real_files.rs  validate_real.rs
crates/rs_rst/: Cargo.toml  README.md
crates/rs_rst/docs/: real-files-report.md
crates/rs_rst/src/: error.rs  lib.rs  read.rs  rst.rs  write.rs
crates/rs_rst/tests/: real_files.rs  roundtrip.rs
crates/rs_tex/: Cargo.toml  README.md  build.rs
crates/rs_tex/docs/: real-files-report.md
crates/rs_tex/src/: dds.rs  decode.rs  encode.rs  error.rs  lib.rs  read.rs  texture.rs  write.rs
crates/rs_tex/tests/: real_files.rs  roundtrip.rs
crates/rs_troybin/: Cargo.toml
crates/rs_troybin/src/: dict.rs  error.rs  lib.rs  read.rs  resolve.rs  troybin.rs  write.rs
crates/rs_troybin/tests/: roundtrip.rs
crates/rs_wad/: Cargo.toml  README.md
crates/rs_wad/docs/: real-files-report.md
crates/rs_wad/src/: builder.rs  chunk.rs  decoder.rs  encoder.rs  error.rs  lib.rs  wad.rs
crates/rs_wad/tests/: builder.rs  real_files.rs  roundtrip.rs
docs/: architecture.md  cli.md  formats.md
