[package]
name = "rs_bin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
rs_io = { workspace = true }
rs_hash = { workspace = true }
rs_math = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
rs_hash = { workspace = true }
