[package]
name = "rs_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "rs_cli"
path = "src/main.rs"

[dependencies]
ritoshark = { workspace = true }
rs_hash = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
