[package]
name = "rs_rman"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
rs_io = { workspace = true }
zstd = { workspace = true }
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }

[features]
default = []
verify = ["dep:sha2", "dep:blake3"]

[dev-dependencies]
ureq = "2"
