[package]
name = "rs_rst"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
rs_io = { workspace = true }
rs_hash = { workspace = true }
indexmap = { workspace = true }
