[package]
name = "rs_tex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
rs_io = { workspace = true }
rs_math = { workspace = true }
image = { workspace = true }
ddsfile = "0.5"
texture2ddecoder = "0.1"
texpresso = "2.0.2"
intel_tex_2 = "=0.4.0"
