[package]
name = "rs_wad"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
parallel = ["dep:rayon"]

[dependencies]
thiserror = { workspace = true }
rs_io = { workspace = true }
rs_hash = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true, optional = true }
